# minimalist-utils

./: .clang-format  CMakeLists.txt  README.md  minimalist-utils.pc.in
include/minimalist/: graph.h  hash_map.h  map.h  set.h  types.h
src/: graph.c  hash_map.c  map.c  set.c
tests/: test_graph.c  test_hash_map.c  test_map.c
